# risk_questionnaire

./: .gitignore  API_DOCUMENTATION.md  AUTH_SETUP.md  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
app/: main.py
app/api/: auth.py  bedrock.py  dashboard.py  feedback.py  knowledge_base.py  questionnaire.py  reference_data.py  role.py
app/core/: __init__.py  config.py  logger.py  security.py
app/core/clients/: bedrock.py  qdrant.py
app/database/: __init__.py  connection.py
app/enums/: __init__.py  user.py
app/models/: __init__.py  client.py  feedback.py  question.py  questionnaire_file.py  sector.py  technology.py  user.py
app/schemas/: __init__.py  auth.py  role.py  user.py
app/services/: __init__.py  auth_service.py  bedrock_service.py  dashboard_service.py  excel_parser.py  knowledge_base.py  role.py  s3_service.py  structure.py
app/static/: Alexandria Real Estate (ARE) - Bon Appetit_Agilysys_SquareSpace_Triple Seat_Authorize.net {05. IT Control Evaluation and Implementation Testwork - PBC}.xlsx  Henry Ford Health3-Sector Healthcare_Technology TaskUp.xlsx  example1.xlsx  example2.xlsx  example3.xlsx  ~$example2.xlsx
app/static/facts_output/: facts_1-Hardware.txt  facts_1_Obtain_understanding.txt  facts_2-Network.txt  facts_2_DI_-_identified_IT_controls.txt  facts_3-MedicalDeviceConnectivity.txt  facts_4-SoftwareLicDatabaseInterf.txt  (+7 more)
app/tests/: logger_test.py  run_tests.py  test_bedrock_client.py  test_qdrant_client.py  test_qdrant_filtering.py
app/utils/: __init__.py  dependencies.py
