[project]
name = "risk-questionnaire-ai-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.35.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "pydantic[email]>=2.11.9",
    "requests>=2.32.5",
    "boto3>=1.40.36",
    "langchain>=1.0.2",
    "langchain-aws>=1.0.0",
    "langfuse==2.60.10",
    "qdrant-client>=1.15.1",
]
